@@ -1,3 +1,11 @@
+2008-06-10	Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* gamewin.cc: Fixing segfaults on exit.
+	* actors.cc: Fixed checks that were failing due to operator precedence.
+	* effects.cc: Fixed crash on using Death Vortex/Energy Mist. Now, only need
+	  to fix Death Vortex/Energy Mist so that they work again.
+	* monsters.cc: Fixed carpet-filled monster inventory bug.
+	* shapes/shapeinf.cc: Correctly initializing monster food value.
+
 2008-06-03	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	BIG Commit (TM). Quite likely, there are a lot of bugs.
 	* Version bump to 1.04.05cvs due to massive internal changes and also due to
